[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/MainMenu/TitleMenu/MainMenu.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="MainControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MainControl"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1164.0
margin_top = 165.0
margin_right = -352.0
margin_bottom = -140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainControl/MarginContainer"]
margin_right = 404.0
margin_bottom = 775.0
custom_constants/separation = 100

[node name="LevelSelectButton" type="Button" parent="MainControl/MarginContainer/VBoxContainer"]
margin_right = 404.0
margin_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut_in_tooltip = false
text = "Level Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditorButton" type="Button" parent="MainControl/MarginContainer/VBoxContainer"]
margin_top = 218.0
margin_right = 404.0
margin_bottom = 336.0
size_flags_vertical = 3
text = "Level Editor"

[node name="CustomizeButton" type="Button" parent="MainControl/MarginContainer/VBoxContainer"]
margin_top = 436.0
margin_right = 404.0
margin_bottom = 554.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Customize"

[node name="SettingsButton" type="Button" parent="MainControl/MarginContainer/VBoxContainer"]
margin_top = 654.0
margin_right = 404.0
margin_bottom = 775.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
[connection signal="pressed" from="MainControl/MarginContainer/VBoxContainer/LevelSelectButton" to="." method="_on_LevelSelectButton_pressed"]
[connection signal="pressed" from="MainControl/MarginContainer/VBoxContainer/EditorButton" to="." method="_on_EditorButton_pressed"]
[connection signal="pressed" from="MainControl/MarginContainer/VBoxContainer/CustomizeButton" to="." method="_on_CustomizeButton_pressed"]
[connection signal="pressed" from="MainControl/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
